--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,12 @@ dependencies {
     // also add plugin and class path
     implementation "com.google.dagger:hilt-android:2.38.1"
     annotationProcessor "com.google.dagger:hilt-android-compiler:2.38.1"
+
+
+    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation("androidx.fragment:fragment-ktx:1.3.6")
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+
 }
 
 // Allow references to generated code
